--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   "files": [
     "src/"
   ],
+  "bin": {
+    "new-release": "./src/cli.js"
+  },
   "dependencies": {
     "detect-next-version": "1.1.3",
     "execa-pro": "1.0.2",
