--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "dependencies": {
     "detect-next-version": "1.1.3",
     "execa-pro": "1.0.2",
-    "get-pkg": "0.3.0",
+    "latest-version": "3.1.0",
     "parse-git-log": "0.2.1",
     "semver": "5.4.1"
   },
