--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
   "dependencies": {
     "detect-next-version": "1.1.3",
     "execa-pro": "1.0.2",
+    "is-ci": "1.0.10",
     "latest-version": "3.1.0",
+    "minimist": "1.2.0",
     "parse-git-log": "0.2.1",
     "semver": "5.4.1"
   },
