fix(pkg): cleanup "release" npm script
Signed-off-by: Charlike Mike Reagent <olsten.larck@gmail.com>

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "precommit": "yarn hela precommit",
     "commit": "yarn hela commit",
     "prepublishOnly": "yarn hela protect",
-    "release": "./src/cli.js --ci"
+    "release": "./src/cli.js"
   },
   "license": "Apache-2.0",
   "licenseStart": 2017,
