--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "scripts": {
     "docs": "verb",
     "lint": "eslint '**/*.js' --cache --fix --quiet --format codeframe",
+    "test-only": "asia -r esm",
     "test": "nyc asia",
-    "commit": "yarn lint && yarn test && yarn dry",
-    "dry": "git add -A && git status --porcelain && gitcommit -sS",
-    "release": "node cli.js"
+    "precommit": "yarn run lint && yarn run test-only",
+    "commit": "yarn dry",
+    "dry": "git add -A && git status --porcelain && gitcommit",
+    "release": "tunnckocore-release"
   },
   "engines": {
     "node": "^8.11.0 || >=10.13.0"
@@ -28,17 +30,12 @@
     "index.js",
     "cli.js"
   ],
-  "bin": {
-    "release": "cli.js",
-    "new-release": "cli.js",
-    "tunnckocore-release": "cli.js"
-  },
   "main": "index.js",
   "module": "src/index.js",
   "typings": "src/index.d.ts",
-  "version": "5.0.0",
+  "version": "5.0.3",
   "repository": "tunnckoCoreLabs/new-release",
-  "homepage": "https://github.com/tunnckoCore/release-cli",
+  "homepage": "https://github.com/tunnckoCoreLabs/new-release",
   "author": "Charlike Mike Reagent (https://tunnckocore.com)",
   "publishConfig": {
     "access": "public",
@@ -76,5 +73,10 @@
       "new-release",
       "semantic-release"
     ]
+  },
+  "bin": {
+    "release": "cli.js",
+    "new-release": "cli.js",
+    "tunnckocore-release": "cli.js"
   }
 }
